recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:4: error: not found: value spirale
  spirale(step-1,90,length+increment,increment)
  ^Spiral:4: error: not found: value step
  spirale(step-1,90,length+increment,increment)
          ^